<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mostovychv.wedmand.bankassistant.AutorzyActivity">

    <TextView
        android:id="@+id/textViewDawidWedman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DawidWedman"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewAutorzy"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView188618"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indeks188618"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewDawidWedman"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textViewVladyslavMostovych"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vladslavMostovych"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewAutorzy"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="256dp"
        android:layout_height="251dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewDane"
        app:layout_constraintVertical_bias="0.47"
        android:contentDescription="@string/obrazek" />

    <TextView
        android:id="@+id/textViewAutorzy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autorzy"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView187516"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indeks187516"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewVladyslavMostovych"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoOProjekcie"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/textView188618"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewPrzedmiot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/przedmiot"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewInfo"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewDane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zrodloDanych"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewUniwersytet"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewUniwersytet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uniwersytet"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrzedmiot"
        app:layout_constraintHorizontal_bias="0.507" />

</android.support.constraint.ConstraintLayout>
